[gd_scene load_steps=2 format=3 uid="uid://ba7sfyxrhrekb"]

[ext_resource type="Script" path="res://main_menu.gd" id="1_1hth1"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1hth1")

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -79.5
offset_top = 60.0
offset_right = 79.5
offset_bottom = 86.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 56
text = "Unnamed Ball Game"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="NewGameButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Start"

[node name="QuitButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Quit"

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="HBoxContainer/QuitButton"]
initial_position = 2
size = Vector2i(254, 100)
ok_button_text = "Quit"
dialog_text = "Are you sure you want to quit?"
cancel_button_text = "Stay"

[connection signal="pressed" from="HBoxContainer/NewGameButton" to="." method="_on_new_game_button_pressed"]
[connection signal="pressed" from="HBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="canceled" from="HBoxContainer/QuitButton/ConfirmationDialog" to="." method="_on_confirmation_dialog_canceled"]
[connection signal="confirmed" from="HBoxContainer/QuitButton/ConfirmationDialog" to="." method="_on_confirmation_dialog_confirmed"]
